--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "framer-motion": "^12.4.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.3.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.3.0",
+    "reacticon": "^0.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
